# Molmo2toVLA

./: README.md  fps_agent_client.py  fps_agent_client_evalrun.py  list_distance_drift.py  list_wrong_centres.py  orchestrator.py  pyproject.toml
client/: fps_agent_client_evalrun.py
molmo-service/: app.py
orchestrator/: orchestrator.py
utils/: gradio-demo.py  list_no_actions.py  list_no_points.py  molmo_service_test.py  plot_points_screenshots.py  test.py
