[project]
name = "molmo2-vla"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ "fastapi", 
"uvicorn", 
"httpx", 
"keyboard", 
"pillow", 
"pyautogui", 
"transformers==4.57.1", 
"torch", 
"einops", 
"accelerate", 
"decord2", 
"molmo_utils" ]
